# websocket_proxy

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  LICENSE  README.md
cmake/: CPM.cmake  slick_queue.cmake
dependencies/slicksocket/include/lws/: lws_config.h
dependencies/slicksocket/include/slicksocket/: websocket_client.h
dependencies/slicksocket/lib/: libcrypto.lib  websockets.lib
dependencies/slicksocket/lib/Release/: slicksocket.lib
example/: CMakeLists.txt  alpaca_websocket_client.h  main.cpp
example/alpaca_websocket_client/: main.cpp
include/alpaca_websocket_proxy/: alpaca_websocket_proxy_client.h  types.h
include/websocket_proxy/: types.h  websocket_proxy_client.h
src/: alpaca_websocket_proxy.cpp  alpaca_websocket_proxy.h  main.cpp  pch.cpp  pch.hpp  spdlog_include.h  version.h.in  websocket.h  websocket_proxy.cpp  websocket_proxy.h
zorro_websocket_proxy/: zorro_websocket_proxy.vcxproj  zorro_websocket_proxy.vcxproj.filters
zorro_websocket_proxy/src/: main.cpp  websocket.h  zorro_websocket_proxy.cpp  zorro_websocket_proxy.h
zorro_websocket_proxy_client/: zorro_websocket_proxy_client.vcxproj  zorro_websocket_proxy_client.vcxproj.filters
zorro_websocket_proxy_client/include/: types.h  utils.h  zorro_websocket_proxy_client.h
zorro_websocket_proxy_client/src/: zorro_websocket_proxy_client.cpp
zorro_websockets_proxy/: zorro_websockets_proxy.vcxproj  zorro_websockets_proxy.vcxproj.filters
zorro_websockets_proxy/src/: main.cpp  websocket.h  zorro_websockets_proxy.cpp
zorro_websockets_proxy_lib/: zorro_websockets_proxy_lib.vcxproj  zorro_websockets_proxy_lib.vcxproj.filters
zorro_websockets_proxy_lib/src/: zorro_websockets_proxy_client.cpp
